--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ footer{
 }
 
 .main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   width: 100%;
   background-image: url(img/background.jpeg);
@@ -108,7 +111,6 @@ footer{
 
 .c2{
   color: white; 
-  padding-top: 300px;
   font-size: 50px;
 }
 
