--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav ul {
   display: flex;
   align-items: center;
   list-style-type: none;
+  margin-right: 90px;
 }
 nav li {
   font-size: 2.5rem;
@@ -308,4 +309,35 @@ label{
   font-size: larger;
 }
 
+/* dropdown */
 
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: white;
+  width: 200px;
+  z-index: 1;
+  margin-top: 40px;
+}
+
+.dropdown-content a{
+  color:#00A8C7 ;
+  display: block;
+  padding: 5px;
+}
+
+.dropdown:hover .dropdown-content{
+  display: block;
+}
+
+.dropdown:hover .dropbtn{
+  padding: 40px 30px;
+  color: #00a8c7;
+  background-color: white;
+}
+
+.dropdownoop:hover, .dropdownlaravel:hover, .dropdowntesten:hover{
+  width: 200px;
+  height: auto;
+  background-color: #E9E9E9;
+}
